# autonomous-robot-navigation

./: README.md
group5_tue4tm00_assignment1/: CMakeLists.txt  package.xml
group5_tue4tm00_assignment1/config/: empty.yaml
group5_tue4tm00_assignment1/group5_tue4tm00_assignment1/: my_module.py  tools.py
group5_tue4tm00_assignment1/launch/: demo_safe_reactive_navigation.launch.py  demo_safe_twist_teleop_2D.launch.py  empty.launch.py  safe_reactive_navigation.launch.py  safe_twist_teleop_2D.launch.py
group5_tue4tm00_assignment1/scripts/: safe_reactive_navigation.py  safe_twist_teleop_2D.py
group5_tue4tm00_assignment2/: CMakeLists.txt  package.xml
group5_tue4tm00_assignment2/config/: robot_scan_map_costmap.rviz  robot_scan_map_costmap_path.rviz  safe_navigation_costmap.yaml  search_based_path_planner.yaml  sensor_based_path_follower.yaml
group5_tue4tm00_assignment2/group5_tue4tm00_assignment2/: tools_2.py
group5_tue4tm00_assignment2/launch/: demo_safe_navigation_costmap.launch.py  demo_search_based_path_planner.launch.py  demo_sensor_based_path_follower.launch.py  safe_navigation_costmap.launch.py  search_based_path_planner.launch.py  sensor_based_path_follower.launch.py
group5_tue4tm00_assignment2/maps/turtlebot3_stage2/: map.pgm
group5_tue4tm00_assignment2/maps/turtlebot3_world/: map.pgm  map.yaml
group5_tue4tm00_assignment2/scripts/: safe_navigation_costmap.py  search_based_path_planner.py  sensor_based_path_follower.py
group5_tue4tm00_assignment3/: CMakeLists.txt  README.md  package.xml
group5_tue4tm00_assignment3/config/: safe_navigation_costmap.yaml
group5_tue4tm00_assignment3/group5_tue4tm00_assignment3/: tools3.py
group5_tue4tm00_assignment3/launch/: demo_safe_navigation_costmap.launch.py  demo_sampling_based_path_planner.launch.py  demo_sensor_based_path_follower.launch.py  safe_navigation_costmap.launch.py  sampling_based_path_planner.launch.py  sensor_based_path_follower.launch.py
group5_tue4tm00_assignment3/maps/turtlebot3_stage2/: map.yaml
group5_tue4tm00_assignment3/maps/turtlebot3_stage3/: map.pgm  map.yaml
group5_tue4tm00_assignment3/scripts/: safe_navigation_costmap.py  sampling_based_path_planner.py  sensor_based_path_follower.py
group5_tue4tm00_project/: CMakeLists.txt  package.xml
group5_tue4tm00_project/config/: costmap.yaml  goal_poses.yaml  odometry.yaml  robot_goal_scan_map_costmap_path.rviz  robot_scan_map_costmap.rviz
group5_tue4tm00_project/launch/: costmap.launch.py  demo_navigation.launch.py  odometry.launch.py  path_follower.launch.py  path_planner.launch.py  visualization.launch.py
group5_tue4tm00_project/maps/core_large_office/: map.pgm  map.yaml
group5_tue4tm00_project/scripts/: costmap.py  odometry.py  path_follower.py  path_planner.py  visualization.py
install/group5_tue4tm00_assignment3/lib/group5_tue4tm00_assignment3/: sampling_based_path_planner.py
